# goodcommit

crates/core/: Cargo.toml
