[package]
name = "goodcommit-core"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Core library for Good Commit"
repository = "https://github.com/Bikz/goodcommit"

[dependencies]
async-trait = "0.1"
futures = "0.3"
globset = "0.4"
rand = "0.10"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9"
tracing = "0.1"
